* Make gamma the new mainline
* Make engineers work during time skips
* Add new challenge: Black Sky

Themes:
* New themes: Anthracite, Black

Minor:
* Caravanserai does not count anymore as a free Tradepost
* Fix display of Standing ratio for Tradeposts
* Increase years in stats during offline progression
* Arrange price lists in buildings and upgrades in the same order as in the left column

v 1.4.8.0 (11 june 2020)
Major:
* Fix precrafted amount
* Implement Metallurgist and Chemist traits
* Allow to crash BC market
* Make BC market evolve during offline progression
* Make Divine Proportion 16:9 (all hail TV!)

Themes:
* New theme: Unicorn
* Add an option in order to move tooltip in right column, like Sleek does by default

Minor:
* Gear icon will now have a toggle indicator
* Fix options dialog overflow
* Clear up checkbox indicators
* Clear up chat/log slightly
* Fix tooltip out of window in some conditions
* Add option allowing to modify the ×10 purchase multiplier for Ctrl key
* Add option allowing to hide downgrade buttons
* Fix failing load of very old save files
* Complete description of the “no confirmation” option
* Add option allowing to always show festivals/trade/sacrifice/shatter buttons even if not applicable
* Add option allowing to display craft/trade/sacrifice buttons as percentage
* In case of unassigned engineers, display the actual number instead of just (!)

v 1.4.7.1 (19 apr 2020)
Major:
* Allow to burn paragon without breaking Iron Will mode if insane Space Oddity has already been achieved
* Improve kittens' save compression
* Make Hydroponics increase kittens capacity of Terraforming Stations
* Fix Solar Farms not being affected by Winter Has Come
* Do not refund AM if energy is negative

Themes:
* New themes: Gold, Space, Wood, School, Fluid, Vessel, Minimalist, Oil
* All themes except Classic/Inverted/Grassy/Sleek have to be unlocked (permanent unlock)
* Add an option in order to hide background image (if applicable)